Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-72540

QtWebEngine fails to build when configured with -no-opengl

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.12.1, 5.13.0, 5.15.4
    • 5.11, 5.12.0
    • WebEngine
    • None
    • macOS
    • 2a07e9a17698f1af49eaafcc59dec8ffa4a89eeb (qt/qtwebengine/5.12.1)

    Description

      This is essentially a clone of https://bugreports.qt.io/browse/QTBUG-54327. I left a comment there with the new patch (patch2.diff) but it seems to be unnoticed so I'm creating a new ticket.

      The attached patch is very trivial and applying it makes QtWebEngine successfully build and work w/o OpenGL support in Qt.

      Attachments

        For Gerrit Dashboard: QTBUG-72540
        # Subject Branch Project Status CR V

        Activity

          People

            qt_webengine_team Qt WebEngine Team
            dmik Dmitriy Kuminov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes