Fix building with -no-opengl on macOS

Based on a patch Dmitriy Kuminov.

Change-Id: I5365b16e3b25fcfc5e8be33e6cdcfb85e3e118e4
Fixes: QTBUG-72540
Reviewed-by: Michal Klocek <michal.klocek@qt.io>